src/test/deca/codegen/valid/renduFinal/28.deca
// Description:
//      Absence d'initialisation d'une variable de type classe
//      => On ne peut accèder aux méthodes et aux attributs d'une instance de classe que si celle-ci est initialisée
//
// Resultats:
//      Erreur à l'exécution
//      Ligne 19 : déférencement de null

class A {
    float x = 3.5;
    A a;
    float getAx() {
        return a.x;
    }
}

{
    A oA = null;
    float x = oA.getAx();
}

