src/test/deca/codegen/invalid/renduFinal/01null_deferencement.deca
// Description:
//      Absence d'initialisation d'une variable de type classe
//      => On ne peut accèder aux méthodes et aux attributs d'une instance de classe que si celle-ci est initialisée
//
// Resultats:
//      Erreur à l'exécution
//      Ligne 19 : déférencement de null

class A {
    float x = 3.5;
    float add2() {
        int y=2;
        this.x=this.x+y;
        return x;
    }
}

{
    A oA = null;
    float x = oA.add2();
}

